fix newsletter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,7 @@ video {
 }
 .post-content {
     padding-top: 2rem;
-    padding-bottom: 4rem;
+    /* padding-bottom: 4rem; */
 }
 .post-content p,
 .post-content h1,
@@ -634,7 +634,7 @@ header .bms {
 
 /* ----- FOOTER ----- */
 footer {
-    margin-top: 4rem;
+    margin-top: 5rem;
     padding: 0.5rem;
     background-color: var(--prim-200);
     width: 100%;
